Coding Meetup #16 - Higher-Order Functions Series - Ask for missing details

--- a/6kyu/practice.html
+++ b/6kyu/practice.html
@@ -7,6 +7,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="16. closestPerfectPower.js"></script>
+		<script src="28. codingMeetUp#16.js"></script>
 	</body>
 </html>
